--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,4 +4,5 @@ google-auth==2.23.0
 requests==2.31.0
 flask-cors==4.0.0
 oauthlib==3.2.2
-authlib==1.2.1 
+authlib==1.2.1
+mysql-connector-python==8.2.0 
