--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
+**/pnp
+**/pnp.js
+client/node_modules
 
 # testing
 /coverage
@@ -22,6 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-*/venv
-*/__pycache__
+**/venv
+**/__pycache__
 *.env
