--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "classnames": "^2.5.1",
     "dotenv-flow": "^4.1.0",
     "eventemitter3": "^5.0.1",
+    "google-auth-library": "^9.15.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
